@@ -1,3 +1,12 @@
+2014-11-19  Tom de Vries  <tom@codesourcery.com>
+
+	Backport from mainline
+	PR tree-optimization/62167
+	* tree-ssa-tail-merge.c (stmt_local_def): Handle statements with vuse
+	conservatively.
+	(gimple_equal_p): Don't use vn_valueize to compare for lhs equality of
+	assigns.
+
 2014-11-16  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* doc/tm.texi.in (TARGET_FLAGS_REGNUM): Move around.
